pull-7351-k8s-acme-storage/k3s-configMap/resources/ingressroute.yml
---
# Declaring the user list
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: test---auth
spec:
  addPrefix:
    prefix: "/toto"

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: proxy

spec:
  entryPoints:
     - websecure
  routes:
     - match: Host(`ssh.couill.eu`)
       kind: Rule
       services:
          - name: whoami
            port: 80
